Update OpenSky benchmark to default to 1600k split and unify README structure